Updated Final Report

--- a/conference_101719.tex
+++ b/conference_101719.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
+\usepackage{url}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
@@ -30,12 +31,6 @@
 }
 
 \maketitle
-
-\begin{abstract}
-This document is a model and instructions for \LaTeX.
-This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, 
-or Math in Paper Title or Abstract.
-\end{abstract}
 
 \begin{IEEEkeywords}
 password managers, cybersecurity, authentication, encryption, LastPass breach
@@ -228,8 +223,6 @@ Scytale, ``2024 NIST password guidelines, enhancing security practices,'' 2024. 
 
 \bibitem{nistpassword}
 NIST, ``How do I create a good password?,'' n.d. [Online]. Available: https://www.nist.gov/cybersecurity/how-do-i-create-good-password. Accessed: Nov. 27, 2025.
-\bibitem{scytale2024}
-Scytale, ``2024 NIST password guidelines, enhancing security practices,'' 2024. [Online]. Available: https://scytale.ai/resources/2024-nist-password-guidelines-enhancing-security-practices/. Accessed: Nov. 27, 2025.
 
 \bibitem{cyberinsider2025}
 CyberInsider, ``Best password manager,'' n.d. [Online]. Available: https://cyberinsider.com/password-manager/best-password-manager/. Accessed: Nov. 27, 2025.
@@ -261,11 +254,9 @@ pCloud, ``Password Trends for 2025 and Beyond,'' 2025. [Online]. Available: \url
 
 \bibitem{specopsfuture2025}
 Specops Software, ``The future of passwords: Emerging technologies and trends,'' 2025. [Online]. Available: \url{https://specopssoft.com/blog/future-passwords-emerging-technologies/}. Accessed: Nov. 27, 2025.
+
 \bibitem{crowdstrike2025}
 CrowdStrike, ``Password storage: Saving, managing \& protecting them,'' 2025. [Online]. Available: \url{https://www.crowdstrike.com/en-us/cybersecurity-101/identity-protection/password-storage/}. Accessed: Nov. 27, 2025.
-
-\bibitem{specopsfuture2025}
-Specops Software, ``The future of passwords: Emerging technologies and trends,'' 2025. [Online]. Available: \url{https://specopssoft.com/blog/future-passwords-emerging-technologies/}. Accessed: Nov. 27, 2025.
 
 \bibitem{blueally2025}
 BlueAlly, ``Password Security Best Practices for 2025: An Essential Guide,'' 2025. [Online]. Available: \url{https://www.blueally.com/password-security-best-practices-for-2025-an-essential-guide/}. Accessed: Nov. 27, 2025.
